# ringsce-overlay

./: .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  README.md  SECURITY.md
2fa/: custom-login-script.js  functions.php
cmake-kayte/cmake-kayte/: CMakeDCompiler.cmake.in  CMakeLists.txt
d-for-xcode/: README.md
d-for-xcode/D for Xcode.xcodeproj/: project.pbxproj
d-for-xcode/D for Xcode.xcodeproj/project.xcworkspace/xcuserdata/pedro.xcuserdatad/: UserInterfaceState.xcuserstate
d-for-xcode/D for Xcode.xcodeproj/xcuserdata/pedro.xcuserdatad/xcschemes/: xcschememanagement.plist
d-for-xcode/Launcher App/: Info.plist  Launcher.c
d-for-xcode/Resources/: Info.plist
kayte-for-xcode/Launcher App/: Launcher.c  Launcher.m
kayte-for-xcode/kayte for Xcode.xcodeproj/: project.pbxproj
kayte-for-xcode/kayte for Xcode.xcodeproj/project.xcworkspace/xcuserdata/pedro.xcuserdatad/: UserInterfaceState.xcuserstate
kayte-for-xcode/kayte for Xcode.xcodeproj/xcuserdata/pedro.xcuserdatad/xcschemes/: xcschememanagement.plist
parser/: .gitignore  dub.json
ringsce-editor/: CMakeLists.txt  package-lock.json
ringsce-editor/ide/intel/: project1.lps
ringsce-editor/ide/intel/lib/x86_64-darwin/: createfile.ppu  project1.compiled  savebas.ppu  savecpp.ppu  savephp.ppu  search.ppu  settings.ppu  setup1.ppu  splashscreen.ppu  sqlcon.ppu  unit1.ppu  unit2.ppu  unit3.ppu  unit4.ppu  updater.ppu
src/: CMakeLists.txt
src/curl/: CMakeLists.txt
src/kaytana/: CMakeLists.txt  Doxyfile.in  interpreter.h  main.cpp
src/kayte/: CMakeLists.txt  CSSParcer.cpp  CSSParser.h  HTMLParser.cpp  HTMLParser.h  bytecode_extensions.h  interpreter.cpp  interpreter.h  main.cpp  vm.cpp
src/kayte/dsrc/: CMakeLists.txt  CSSParser.d  EACCES.cpp  EACCES.d  HTMLParser.d  Interpreter.d  README.md  dtdParser.d  dub.json  dub.selections.json  interpreter.cpp  interpreter.d  interpreter.di  interpreter.h  main.d  pk3_manager.d  threading.c  threading.d  updater.d  vm.d  xml_comments_parser.d  xml_parser.d
src/kayte/dsrc/source/: Interpreter.d  dub.json  interpreter.cpp
src/kayte/ui/: UI.dtd  ui.xml
src/openal-soft/1.23.1/: CMakeLists.txt  INSTALL_RECEIPT.json
src/openal-soft/1.23.1/.brew/: openal-soft.rb
src/openal-soft/1.23.1/lib/: libopenal.1.23.1.dylib  libopenal.1.dylib
src/openal-soft/1.23.1/lib/cmake/OpenAL/: OpenALTargets-release.cmake
src/openal-soft/1.23.1/lib/pkgconfig/: openal.pc
src/patcher/: CMakeLists.txt  addtorrentdialog.cpp  addtorrentdialog.h  bencodeparser.cpp  bencodeparser.h  connectionmanager.cpp  connectionmanager.h  filemanager.cpp  filemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  metainfo.cpp  metainfo.h  peerwireclient.cpp  peerwireclient.h  ratecontroller.cpp  ratecontroller.h  torrent.pro  torrentclient.cpp  torrentclient.h  torrentserver.cpp  torrentserver.h  trackerclient.cpp  trackerclient.h
src/patcher/resources/: icon.icns
src/tilde/: CMakeLists.txt  git.sh  run.sh  tilde.sh
src/zlib/: CMakeLists.txt
